# cbombyx

./: .gitmodules  Bombyx.pc.in  config.h.meson  linker-script-devices.ver  meson.build  meson_options.txt  meson_post_install.py  tb.sh  valgrind.suppressions
data/: bombyx-wait-online.service.in  bombyx.service.in  meson.build  org.freedesktop.Bombyx.service.in  server.conf.in
doc/: a.txt
docs/: code_snippet.c  config.txt  meson.build  record.txt
docs/api/: Makefile.am  network-manager-docs.xml
examples/C/glib/: add-connection-gdbus.c  add-connection-libnm.c  get-ap-info-libnm.c
examples/python/dbus/: is-wwan-default.py
introspection/: meson.build  org.fpemud.Bombyx.Connection.xml  org.freedesktop.Bombyx.Connection.xml  org.freedesktop.Bombyx.xml
po/: meson.build
shared/: meson.build  nm-common-macros.h  nm-meta-setting.c  nm-version-macros.h.in
shared/nm-utils/: byx-enum-utils.h  nm-compat.c  nm-dedup-multi.c  nm-enum-utils.c  nm-enum-utils.h  nm-glib.h  nm-hash-utils.c  nm-macros-internal.h  nm-random-utils.c  nm-random-utils.h  nm-shared-utils.c  nm-test-utils.h  nm-udev-utils.c  nm-vpn-plugin-macros.h  nm-vpn-plugin-utils.c
src/: NetworkManagerUtils.c  NetworkManagerUtils.h  byx-common.h  byx-default.h  byx-manager.c  byx-manager.h  byx-rfkill-manager.h  byx-sleep-monitor.c  byx-sleep-monitor.h  main-utils.c  main-utils.h  main.c  meson.build  nm-act-request.c  nm-active-connection.c  nm-active-connection.h  nm-common-macros.h  nm-config-data.c  nm-config.c  nm-config.h  nm-connectivity.c  nm-core-utils.c  nm-core-utils.h  nm-dcb.c  nm-firewall-manager.c  nm-hostname-manager.c  nm-iface-helper.c  nm-logging.c  nm-logging.h  nm-manager.c  nm-manager.h  nm-netns.c  nm-pacrunner-manager.c  nm-policy.c  nm-policy.h  nm-proxy-config.c  nm-rfkill-manager.c  nm-session-monitor.c  nm-sleep-monitor.c  nm-types.h  (+1 more)
src/common/: byx-common.h  byx-default-values.h  byx-internal-macros.h  byx-logging.h  byx-types.h  byx-version-macros.h.in  meson.build
src/config/: byx-config-manager.c  byx-config-manager.h  byx-config.c  byx-config.h  byx-connection-persist-data.c  byx-connection-persist-data.h  byx-connection-run-data.c  byx-connection-run-data.h  byx-persist-data.c  byx-persist-data.h  byx-run-data.c  byx-run-data.h  byx-service-persist-data.h  byx-service-run-data.h  config-cmdline-options.c  config-cmdline-options.h  config-data.c  config-data.h  config-manager.c  config-manager.h  config.c  config.h  config_cmdline_options.h  nm-config-data.c  nm-config-data.h  nm-config.c  nm-config.h  persist-data.c  persist-data.h  service-run-data.h
src/connection/: byx-connection-manager.c  byx-connection-manager.h  byx-connection-plugin.h  byx-connection.c  byx-connection.h
src/dbus/: byx-dbus-common.h  byx-dbus-manager.c  byx-dbus-manager.h  byx-dbus-object.c  byx-dbus-object.h  byx-dbus-utils.c  byx-dbus-utils.h
src/device/: byx-device-manager.c  byx-device-manager.h  byx-device.c  byx-device.h
src/dns/: byx-dns-manager.h  nm-dns-dnsmasq.c  nm-dns-manager.c  nm-dns-plugin.c  nm-dns-systemd-resolved.c  nm-dns-unbound.c
src/logging/: nm-logging.h
src/netconfig/: nm-dns-config.c
src/platform/: nm-fake-platform.c  nm-linux-platform.c  nm-netlink.c  nm-platform-utils.c  nm-platform.c  nm-platform.h  nmp-netns.c  nmp-object.c
src/platform/tests/: monitor.c  test-common.c  test-common.h  test-link.c  test-route.c
src/platform/wifi/: nm-wifi-utils-nl80211.c  nm-wifi-utils-wext.c  nm-wifi-utils.c
src/platform/wpan/: nm-wpan-utils.c
src/plugin/: byx-connection-plugin-interface.h  byx-plugin-common.h  byx-plugin-connection-interface.h  byx-plugin-manager.c  byx-plugin-manager.h  byx-plugin-service-interface.h  byx-service-plugin-interface.h
src/rfkill/: byx-rfkill-manager.c
src/service/: byx-service-manager.c  byx-service-manager.h  byx-service.c  byx-service.h
src/settings/: nm-agent-manager.c  nm-secret-agent.c  nm-settings-connection.c  nm-settings-connection.h  nm-settings-plugin.c  nm-settings.c  nm-settings.h
src/settings/keyfile/: nms-keyfile-connection.c  nms-keyfile-plugin.c  nms-keyfile-reader.c  nms-keyfile-utils.c  nms-keyfile-writer.c
src/sleep/: byx-sleep-monitor.c
src/util/: byx-glib-keyfile.c  byx-glib-keyfile.h  byx-internal-macros.h  byx-logging.h  byx-platform.c  byx-platform.h  meson.build  util-glib-keyfile.c  util-glib-keyfile.h  util-gobject-singleton.h  util-ip-link.c  util-ip-link.h  util-linux-ip-link.c  util-linux-ip-link.h  util-linux-netlink-socket.c  util-linux-netlink-socket.h  util-network-device.c  util-network-device.h  util-stdio.c  util-stdio.h  util-stdlib.h  util-udev-client.h
src/utils/: byx-random-utils.c  byx-udev-utils.h  c-list-util.h  nm-c-list.h  nm-hash-utils.h  nm-macros-internal.h
temp/: a.c  nm-core-utils.c  nm-core-utils.h  nm-netns.c  nm-ntfac.c  nm-ntfac.h  temp.txt
temp/config/: nm-config-data.h  nm-config.h
temp/netconfig/: nm-dns-config.c
temp/platform/: nm-linux-platform.c  nm-netlink.c  nm-platform-utils.c  nm-platform.c  nm-platform.h  nmp-netns.c  nmp-object.c  nmp-object.h
temp/settings/: nm-settings-connection.c  nm-settings-connection.h  nm-settings.c
temp/settings/keyfile/: nms-keyfile-plugin.c  nms-keyfile-reader.c  nms-keyfile-utils.c  nms-keyfile-writer.c
temp/utils/: byx-enum-utils.c  byx-udev-utils.c  nm-dedup-multi.c  nm-hash-utils.c  nm-hash-utils.h  nm-macros-internal.h  nm-shared-utils.c  nm-shared-utils.h
test/: nm-test-utils-core.h
test/keyfiles-tests/: test-keyfile.c
tools/: debug-helper.py  temp.doc  test-build.sh  test-networkmanager-service.py
vapi/: meson.build
